--- a/activiti-demo/pom.xml
+++ b/activiti-demo/pom.xml
@@ -121,6 +121,10 @@
 		    <groupId>org.springframework.security</groupId>
 		    <artifactId>spring-security-config</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.codehaus.groovy</groupId>
+		    <artifactId>groovy-jsr223</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
