--- a/activiti-demo/pom.xml
+++ b/activiti-demo/pom.xml
@@ -130,6 +130,11 @@
 	<build>
 		<plugins>
 			<plugin>
+    			<groupId>com.github.ulisesbocchio</groupId>
+    			<artifactId>jasypt-maven-plugin</artifactId>
+    			<version>3.0.3</version>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
