--- a/hello-world/src/main/resources/application.properties
+++ b/hello-world/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+server.port=8083
+spring.datasource.url=jdbc:postgresql://localhost:5432/helloworld
