--- a/springredis/pom.xml
+++ b/springredis/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>springredis</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>springredis</name>
-	<description>Spring Boot Redis</description>
+	<description>Spring Boot Redis Running on Docker</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
