--- a/book management system/pom.xml
+++ b/book management system/pom.xml
@@ -8,6 +8,16 @@
   <name>book-management-system Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-context</artifactId>
+	    <version>6.0.12</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-core</artifactId>
+	    <version>6.0.12</version>
+	</dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
