--- a/book management system/pom.xml
+++ b/book management system/pom.xml
@@ -89,6 +89,17 @@
   		<artifactId>spring-webmvc</artifactId>
   		<version>5.2.4.RELEASE</version>
   	</dependency>
+  	<dependency>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+		<version>1.18.30</version>
+		<scope>provided</scope>
+	</dependency>
+	<dependency>
+	    <groupId>jakarta.validation</groupId>
+	    <artifactId>jakarta.validation-api</artifactId>
+	    <version>3.0.2</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>book-management-system</finalName>
