--- a/book management system/pom.xml
+++ b/book management system/pom.xml
@@ -100,6 +100,23 @@
 	    <artifactId>jakarta.validation-api</artifactId>
 	    <version>3.0.2</version>
 	</dependency>
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-api</artifactId>
+	    <version>2.0.9</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-simple</artifactId>
+	    <version>2.0.9</version>
+	    <scope>test</scope>
+	</dependency>
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-nop</artifactId>
+	    <version>2.0.9</version>
+	    <scope>test</scope>
+	</dependency>
   </dependencies>
   <build>
     <finalName>book-management-system</finalName>
