--- a/book management system/pom.xml
+++ b/book management system/pom.xml
@@ -117,6 +117,11 @@
 	    <version>2.0.9</version>
 	    <scope>test</scope>
 	</dependency>
+	<dependency>
+	    <groupId>javax.annotation</groupId>
+	    <artifactId>javax.annotation-api</artifactId>
+	    <version>1.3.2</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>book-management-system</finalName>
