--- a/maven-springmvc-project/pom.xml
+++ b/maven-springmvc-project/pom.xml
@@ -25,11 +25,21 @@
 	    <version>6.0.12</version>
 	</dependency>
 	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-jdbc</artifactId>
+	    <version>6.0.12</version>
+	</dependency>
+	<dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>8.0.33</version>
+	</dependency>
+	<dependency>
 	    <groupId>javax.annotation</groupId>
 	    <artifactId>javax.annotation-api</artifactId>
 	    <version>1.3.2</version>
 	</dependency>
-	  	<dependency>
+  	<dependency>
 		<groupId>org.projectlombok</groupId>
 		<artifactId>lombok</artifactId>
 		<version>1.18.30</version>
