--- a/maven-springmvc-project/src/main/resources/db.properties
+++ b/maven-springmvc-project/src/main/resources/db.properties
@@ -1,6 +1,6 @@
 #Mysql Properties
 mysql.driver=com.mysql.cj.jdbc.Driver
-mysql.url=jdbc:mysql://localhost:3306/bms
+mysql.url=jdbc:mysql://localhost:3306/springjdbc
 mysql.user=root
 mysql.password=root@04G
 
