--- a/my-project/pom.xml
+++ b/my-project/pom.xml
@@ -7,17 +7,17 @@
   	<dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-context</artifactId>
-	    <version>6.0.12</version>
+	    <version>5.2.4.RELEASE</version>
 	</dependency>
 	<dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-core</artifactId>
-	    <version>6.0.12</version>
+	    <version>5.2.4.RELEASE</version>
 	</dependency>
 	<dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-jdbc</artifactId>
-	    <version>6.0.12</version>
+	    <version>5.2.4.RELEASE</version>
 	</dependency>
   	<dependency>
   		<groupId>org.slf4j</groupId>
