--- a/my-project/pom.xml
+++ b/my-project/pom.xml
@@ -20,25 +20,16 @@
 	    <version>5.2.4.RELEASE</version>
 	</dependency>
   	<dependency>
-  		<groupId>org.slf4j</groupId>
-  		<artifactId>slf4j-log4j13</artifactId>
-  		<version>1.0.1</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>log4j</groupId>
-  		<artifactId>log4j</artifactId>
-  		<version>1.2.17</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.slf4j</groupId>
-  		<artifactId>slf4j-simple</artifactId>
-  		<version>1.8.0-beta2</version>
-  	</dependency>
-  	<dependency>
   		<groupId>org.springframework</groupId>
   		<artifactId>spring-webmvc</artifactId>
   		<version>5.2.4.RELEASE</version>
   	</dependency>
+  	<dependency>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+		<version>1.18.30</version>
+		<scope>provided</scope>
+	</dependency>
   	<dependency>
   		<groupId>jstl</groupId>
   		<artifactId>jstl</artifactId>
