--- a/maven-springmvc-project/pom.xml
+++ b/maven-springmvc-project/pom.xml
@@ -76,6 +76,12 @@
     	<artifactId>jstl</artifactId>
     	<version>1.2</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/taglibs/standard -->
+	<dependency>
+	    <groupId>taglibs</groupId>
+	    <artifactId>standard</artifactId>
+	    <version>1.1.2</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>maven-springmvc-project</finalName>
