--- a/RestfulWebServiceProject/pom.xml
+++ b/RestfulWebServiceProject/pom.xml
@@ -50,6 +50,12 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+	<!-- https://mvnrepository.com/artifact/jakarta.annotation/jakarta.annotation-api -->
+	<dependency>
+	    <groupId>jakarta.annotation</groupId>
+	    <artifactId>jakarta.annotation-api</artifactId>
+	    <version>2.1.1</version>
+	</dependency>
   </dependencies>
   <build>
 	<plugins>
