--- a/RestfulWebServiceProject/pom.xml
+++ b/RestfulWebServiceProject/pom.xml
@@ -29,15 +29,27 @@
 	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
 	<dependency>
-	    <groupId>org.hibernate.orm</groupId>
-	    <artifactId>hibernate-core</artifactId>
-	    <version>6.3.1.Final</version>
-	</dependency>
+  		<groupId>org.hibernate</groupId>
+  		<artifactId>hibernate-core</artifactId>
+  		<version>5.3.20.Final</version>
+  	</dependency>
   	<!-- https://mvnrepository.com/artifact/org.hibernate.javax.persistence/hibernate-jpa-2.1-api -->
 	<dependency>
 	    <groupId>org.hibernate.javax.persistence</groupId>
 	    <artifactId>hibernate-jpa-2.1-api</artifactId>
 	    <version>1.0.2.Final</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
+	<dependency>
+	    <groupId>org.hibernate</groupId>
+	    <artifactId>hibernate-entitymanager</artifactId>
+	    <version>5.3.20.Final</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core-jakarta -->
+	<dependency>
+	    <groupId>org.hibernate</groupId>
+	    <artifactId>hibernate-core-jakarta</artifactId>
+	    <version>5.6.15.Final</version>
 	</dependency>
   	<dependency>
   		<groupId>javax.servlet</groupId>
@@ -56,6 +68,22 @@
 	    <artifactId>jakarta.annotation-api</artifactId>
 	    <version>2.1.1</version>
 	</dependency>
+	<dependency>
+	    <groupId>javax.annotation</groupId>
+	    <artifactId>javax.annotation-api</artifactId>
+	    <version>1.3.2</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/jakarta.transaction/jakarta.transaction-api -->
+	<dependency>
+	    <groupId>jakarta.transaction</groupId>
+	    <artifactId>jakarta.transaction-api</artifactId>
+	    <version>2.0.1</version>
+	</dependency>
+  	<dependency>
+  		<groupId>mysql</groupId>
+  		<artifactId>mysql-connector-java</artifactId>
+  		<version>8.0.28</version>
+  	</dependency>
   </dependencies>
   <build>
 	<plugins>
