--- a/maven-springmvc-project/pom.xml
+++ b/maven-springmvc-project/pom.xml
@@ -82,6 +82,18 @@
 	    <artifactId>standard</artifactId>
 	    <version>1.1.2</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+	<dependency>
+	    <groupId>commons-fileupload</groupId>
+	    <artifactId>commons-fileupload</artifactId>
+	    <version>1.4</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+	<dependency>
+	    <groupId>commons-io</groupId>
+	    <artifactId>commons-io</artifactId>
+	    <version>2.14.0</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>maven-springmvc-project</finalName>
