--- a/voting-system/src/main/resources/application.yml
+++ b/voting-system/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
 #    url: spring.datasource.url=jdbc:mysql://localhost:3306/votingsystem
     url: jdbc:postgresql://localhost:5432/votingsystem
     username: postgres
-    password: root
+    password: postgres
 #    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
